--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.18.0",
     "bulma": "^0.7.1",
     "nuxt": "^1.0.0",
+    "truffle": "^4.1.13",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
