--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "bulma": "^0.7.1",
     "nuxt": "^1.0.0",
     "truffle": "^4.1.13",
-    "vuex": "^3.0.1"
+    "truffle-contract": "^3.0.6",
+    "vuex": "^3.0.1",
+    "web3": "^1.0.0-beta.35"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
